1. Collection API Улучшения [#266303]